--- a/src/style.css
+++ b/src/style.css
@@ -18,6 +18,11 @@
     border-radius: 15px;
     margin: 1rem;
 }
+h2 {
+    text-align: center;
+    font-size: 2rem;
+    border: 2px solid black;
+}
 #forecast {
     background: rgba(0, 0, 0, .3);
     border-radius: 15px;
